fix esthetics section alignment for lashes and body scrub

--- a/index.css
+++ b/index.css
@@ -526,22 +526,37 @@ footer p {
 }
 
 .sub-name {
-  font-size: 2.5rem;
   margin-bottom: 2.5rem;
+  border-bottom: solid 1px #efe3b8;
 }
 
 .sub-service {
   margin-bottom: 8rem;
+  font-size: 2.5rem;
 }
 
 .sub-service:nth-child(4) {
   display: flex;
   justify-content: space-between;
+  border-bottom: solid 1px #efe3b8;
 }
 
-.lash-heading {
-  display: flex;
-  justify-content: space-between;
+.sub-service .lashes {
+  display: grid;
+  font-size: 2.5rem;
+  grid-template: 1fr 1fr 1fr 1fr/ 1fr;
+}
+
+.lashes {
+  border-left: solid 1px #efe3b8;
+}
+
+.lashes .row {
+  display: grid;
+  grid-template: 1fr/ 1fr 1fr 1fr;
+  margin: 2rem 0;
+  padding-left: 2rem;
+  border: unset;
 }
 
 .sub-heading {
